# internal/router/order_router.go
@@ -19,5 +19,8 @@ func (r Router) AddOrderRouter(rg *gin.RouterGroup, mongoDB *mongo.Database) {
 
 	orderRouter.POST("/", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.CreateOrder)
 	orderRouter.GET("/:user_id/:user_type", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.GetOrdersByUserID)
+	orderRouter.DELETE("/:order_id", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.DeleteOrderByOrderID)
+	orderRouter.PUT("/:order_id", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.UpdateOrderByOrderID)
+	orderRouter.PATCH("/:order_id", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.UpdateOrderStatusByOrderID)
 
 }
